# simplesql

./: .cargo-rdme.toml  .gitignore  .simplesql-unix  Cargo.toml  README.md  simplesql.code-workspace
.github/workflows/: rust-relese.yml  rust-test.yml  rust.yml
builder/: build.sh
src/: gui.rs  main.rs  shared.rs  simplesql_config.toml  somplesql_config.json  tui.rs
