[package]
name = "simplesql"
version = "0.0.7"
edition = "2024"
description = "simplesql is a modern, lightweight SQL client that runs in either optional Terminal (TUI) or Graphical (GUI) mode. Built for developers, DBAs, and power users who need fast, intuitive access to their databases."
license = "MIT"
authors = ["mcpeaps_HD<mcpeaps_HD@comboompunktsucht.app>"]
readme = "README.md"

[package.metadata.build-targets]
default = [
  "aarch64-apple-darwin",
  "aarch64-pc-windows-msvc",
  "aarch64-unknown-linux-gnu",
  "aarch64-unknown-linux-musl",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "x86_64-pc-windows-gnu",
  "x86_64-pc-windows-gnullvm",
  "x86_64-unknown-freebsd",
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-linux-musl"
]

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific dependencies would go here

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific dependencies would go here

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies would go here

[dependencies]
# tui.rs
ratatui = "*"
crossterm = "*"
edtui = "*"
tui-logger = "*"
tui-textarea = { version = "*", features = ["search"] }
tui-popup = "*"
chrono = "*"
# main.rs
clap = "*"
# shared.rs
sqlx = { version = "*", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "postgres", "mysql", "any", "derive", "macros", "chrono"] }
serde = { version = "*", features = ["derive", "std"] }
toml = { version = "*", features = ["preserve_order", "serde"] }
log = "*"
fern = "*"
atty = "*"
humantime = "*"
tokio = { version = "*", features = ["rt", "rt-multi-thread", "macros"] }
